--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
+    <!-- UTMify Tracking Pixel -->
+    <script>
+      window.pixelId = "687904fb58e1a43f1880497a";
+      var a = document.createElement("script");
+      a.setAttribute("async", "");
+      a.setAttribute("defer", "");
+      a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+      document.head.appendChild(a);
+    </script>
+    
   </head>
 
   <body>
